fix and created: fixed bags in driver api, created returned clases, converter for controller