@@ -1,13 +1,17 @@
 package com.vehicle.api.servises.implementations;
 
+import com.sun.jdi.connect.spi.TransportService;
 import com.vehicle.api.dto.DriverDto;
+import com.vehicle.api.dto.TransportDto;
 import com.vehicle.api.dto.handler.DriverDtoHandler;
+import com.vehicle.api.dto.handler.TransportDtoHandler;
 import com.vehicle.api.models.drivers.Driver;
 import com.vehicle.api.models.transports.Transport;
 import com.vehicle.api.repos.DriverRepoI;
 import com.vehicle.api.repos.RouteRepoI;
 import com.vehicle.api.repos.TransportRepoI;
 import com.vehicle.api.servises.DriverServiceI;
+import com.vehicle.api.servises.TransportServiceI;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -23,13 +27,16 @@ public class DriverServiceImpl implements DriverServiceI {
     private final DriverRepoI driverRepo;
     private final TransportRepoI transportRepo;
     private final RouteRepoI routeRepo;
+    private final TransportServiceI transportService;
 
     @Autowired
-    public DriverServiceImpl(DriverRepoI driverRepo, TransportRepoI transportRepo, RouteRepoI routeRepo) {
+    public DriverServiceImpl(DriverRepoI driverRepo, TransportRepoI transportRepo, RouteRepoI routeRepo, TransportServiceI transportService) {
         this.driverRepo = driverRepo;
         this.transportRepo = transportRepo;
         this.routeRepo = routeRepo;
+        this.transportService = transportService;
     }
+
 
     @Override
     public Driver addDriver(DriverDto driverDto) {
@@ -53,7 +60,7 @@ public class DriverServiceImpl implements DriverServiceI {
     public Driver updateDriver(DriverDto driverDto) {
         Optional<Driver> driver = driverRepo.findById(driverDto.getId());
         Driver upgradeDriver = DriverDtoHandler.mappingDtoToDriverMethodUpdate(driverDto, driver);
-        log.info("Driver update successful");
+        log.info("Driver successfully updated " + upgradeDriver);
 
         return driverRepo.save(upgradeDriver);
     }
@@ -76,30 +83,31 @@ public class DriverServiceImpl implements DriverServiceI {
     }
 
     @Override
-    // TODO: to consist with DB query
     public boolean addDriverOnTransport(long driverId, long transportId) {
         Optional<Driver> driver = driverRepo.findById(driverId);
         Optional<Transport> transport = transportRepo.findById(transportId);
 
         if (driver.isEmpty() || transport.isEmpty()) {
-         log.warn("Driver or transport is null !");
-         return false;
-        }
-
-        if (transport.get().getDrivers() != null) {
-            log.warn("This transport " + transport.get() + " already has driver " + transport.get().getDrivers());
+            log.warn("Driver or transport is null !");
             return false;
         }
 
-        transport.get().setDrivers(Set.of(driver.get()));
-        transportRepo.save(transport.get());
+//        if (!transport.get().getDrivers().isEmpty()) {
+//            log.warn("This transport " + transport.get() + " already has driver " + transport.get().getDrivers());
+//            return false;
+//        }
+
+        transport.get().setDrivers(Collections.singleton(driver.get()));
+        TransportDto transportDto = TransportDtoHandler.createTransportDto(transport.get());
+
+        transportService.updateTransport(transportDto);
         log.info("Driver: " + driver.get() + " successful added to transport " + transport.get());
         return true;
     }
 
     @Override
     public List<Driver> findAllDriverBySurname(String surname) {
-        List <Driver> driverList;
+        List<Driver> driverList;
         driverList = driverRepo.findDriversBySurname(surname);
 
         log.info("Users list was successful prepared");
@@ -117,7 +125,7 @@ public class DriverServiceImpl implements DriverServiceI {
 
     @Override
     public List<Transport> findAllTransportsWithoutDriver() {
-        return transportRepo.findTransportsWithoutDrivers();
+        return transportRepo.findTransportWithoutDriver();
     }
 
     @Override
